# axion-limits

./: .gitignore  .pre-commit-config.yaml  AxionPlot.py  AxionsGag.db  DataBaseClass.py  DataBaseGag.py  PlotAxionPhoton.py  README.md  WimpPlot.py  XPlotter.py  axionPlot.py  buildDataBase.py  example.py  example_axionplot.py  example_wimpplot.py  generateAxionPlot.py  generatePlots.py  generateWimpPlot.py  plotter_app.py  pyproject.toml  requirements.txt  test.py  wimpPlot.py
.github/: CODEOWNERS
.github/workflows/: build-test.yml
Javat/: index.html  script.js  styles.css
apps/interactive_plotter/: README.md  app.py  requirements.txt
assets/: draggable_labels.js  styles.css
data/: Axions.db  Wimps.db
data/axion/: ABRA10cm.txt  ADMX2018.txt  ADMX2019_1.txt  ADMX2019_2.txt  ADMX2021.txt  ADMX_sidecar.txt  ALPSun_nu.txt  BASE2021.txt  BRASS.txt  CAPP-8TB.txt  CAPP12T_2022.txt  CAPP18T_2022.txt  CAPP2024-12T.txt  CAST-CAPP.txt  CAST_2019_2021_PRL.txt  CROWS.txt  HAYSTAC.txt  HBalpbound.txt  IAXO_nominal.txt  IAXO_plus.txt  MicrowaveCavities.txt  ORGAN.txt  ORGAN1a_2022.txt  QUAX.txt  SHAFT.txt  (+10 more)
databases/: Axions.db  Wimps.db
labeler/: index.html  script.js
myPlottingScripts/: haloscope_zoom_Jun2024.py  haloscopes.py  haloscopes_2024.py  haloscopes_2024_stylish.py  helioscopes.py  helioscopes_2024.py  helioscopes_combinedAstro_2024.py  large_panorama.py  large_panorama_2024.py  lsw.py  lsw_2024.py  myPath.py  panorama.py  panorama_2024.py  panorama_withBabyIAXOraytracing.py  wimps_lowmass.py
security copy/: .gitignore  XPlotter.py  axionPlot.py  wimpPlot.py
(+107 files in other folders)
